--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,18 @@ find_package(OpenGL REQUIRED)
 add_subdirectory("externals")
 
 # compute-shader-sandbox
-add_library(css INTERFACE)
-target_include_directories(css INTERFACE "include")
-target_compile_features(css INTERFACE cxx_std_20)
-set_target_properties(css PROPERTIES CXX_EXTENSIONS OFF)
+add_library(gcss INTERFACE)
+target_include_directories(gcss INTERFACE "include")
+target_compile_features(gcss INTERFACE cxx_std_20)
+set_target_properties(gcss PROPERTIES CXX_EXTENSIONS OFF)
 
-target_link_libraries(css INTERFACE OpenGL::GL)
-target_link_libraries(css INTERFACE glad)
-target_link_libraries(css INTERFACE glfw)
-target_link_libraries(css INTERFACE imgui)
-target_link_libraries(css INTERFACE imgui_glfw_opengl3)
-target_link_libraries(css INTERFACE glm)
-target_link_libraries(css INTERFACE spdlog::spdlog)
+target_link_libraries(gcss INTERFACE OpenGL::GL)
+target_link_libraries(gcss INTERFACE glad)
+target_link_libraries(gcss INTERFACE glfw)
+target_link_libraries(gcss INTERFACE imgui)
+target_link_libraries(gcss INTERFACE imgui_glfw_opengl3)
+target_link_libraries(gcss INTERFACE glm)
+target_link_libraries(gcss INTERFACE spdlog::spdlog)
 
 # sandbox
 add_subdirectory("sandbox")
