--- a/sandbox/hello/CMakeLists.txt
+++ b/sandbox/hello/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(hello "src/main.cpp")
 target_compile_features(hello PRIVATE cxx_std_20)
 set_target_properties(hello PROPERTIES CXX_EXTENSIONS OFF)
 target_include_directories(hello PRIVATE src)
-target_link_libraries(hello PRIVATE css)
+target_link_libraries(hello PRIVATE gcss)
 target_link_libraries(hello PRIVATE glfw)
 target_link_libraries(hello PRIVATE imgui)
 target_link_libraries(hello PRIVATE imgui_glfw_opengl3)
