add particles example

--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(hello)
 add_subdirectory(mandelbrot)
 add_subdirectory(life-game)
+add_subdirectory(particles)
 add_subdirectory(n-body)
