impl reinhard on Yxy space

--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(hello)
 add_subdirectory(mandelbrot)
 add_subdirectory(life-game)
+add_subdirectory(tone-mapping)
 add_subdirectory(particles)
 add_subdirectory(n-body)
